[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Fome.gd" type="Script" id=1]
[ext_resource path="res://Img/Atributos/Comida-status.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "1"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "2"
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
resource_name = "3"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=4]
resource_name = "4"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=5]
resource_name = "5"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}

[sub_resource type="Animation" id=6]
resource_name = "6"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22 ]
}

[sub_resource type="Animation" id=7]
resource_name = "7"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 25 ]
}

[sub_resource type="Animation" id=8]
resource_name = "8"
length = 2.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29, 30, 31, 32, 33 ]
}

[node name="Fome" type="Node"]
script = ExtResource( 1 )

[node name="Comida-status" type="Sprite" parent="."]
position = Vector2( 8, 16 )
texture = ExtResource( 2 )
centered = false
hframes = 6
vframes = 6
__meta__ = {
"_edit_group_": true
}

[node name="AnimationFome" type="AnimationPlayer" parent="Comida-status"]
anims/1 = SubResource( 1 )
anims/2 = SubResource( 2 )
anims/3 = SubResource( 3 )
anims/4 = SubResource( 4 )
anims/5 = SubResource( 5 )
anims/6 = SubResource( 6 )
anims/7 = SubResource( 7 )
anims/8 = SubResource( 8 )

[node name="TimerFome" type="Timer" parent="."]
wait_time = 8.0

[connection signal="timeout" from="TimerFome" to="." method="_on_TimerFome_timeout"]
